--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Authentic French croissants. Patience and effort are required but the results are totally worth it!">
     <title>Homepage</title>
 </head>
 <body>
